# coworld-mtg

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.coworld  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  commissioner.Dockerfile  compose.yaml  corpus.lock.json  coworld_manifest.json  coworld_manifest_template.json  package-lock.json  package.json  phase-source.json  rust-toolchain.toml
.github/workflows/: ci.yml  upload-coworld.yml
commissioner/: coworld-mtg.yaml
crates/cogatrice-harness/: Cargo.toml
crates/cogatrice-harness/src/: lib.rs  main.rs  model.rs  runner.rs
crates/cogatrice-harness/tests/: harness.rs
crates/cogatrice-server/: Cargo.toml
crates/cogatrice-server/src/: config.rs  corpus.rs  decks.rs  lib.rs  main.rs  translate.rs  uri.rs  wire.rs
crates/cogatrice-server/tests/: episode.rs
crates/coworld-mtg-harness/: Cargo.toml
crates/coworld-mtg-harness/src/: aggregate.rs  corpus.rs  invariants.rs  io.rs  lib.rs  main.rs  model.rs  runner.rs  soft_signals.rs
crates/coworld-mtg-harness/tests/: harness.rs
crates/coworld-mtg-server/: Cargo.toml
crates/coworld-mtg-server/src/: assets.rs  lib.rs  main.rs  phase_delta.rs  wire.rs
crates/coworld-mtg-server/tests/: episode.rs
crates/phase-bridge/: Cargo.toml
crates/phase-bridge/data/: card-data.json
crates/phase-bridge/src/: lib.rs  view.rs
crates/phase-bridge/tests/fixtures/: card-data.json
crates/players/goldfish/: Cargo.toml
crates/players/goldfish/src/: lib.rs  main.rs
crates/tabletop-core/: Cargo.toml
crates/tabletop-core/src/: actions.rs  cards.rs  events.rs  expectation.rs  game.rs  ids.rs  lib.rs  redact.rs  rng.rs  setup.rs  zones.rs
crates/tabletop-core/tests/: props.rs  provenance.rs  scripted_duel.rs  windows.rs
decks/: fractal_convergence.json  green_stompy.json  lorehold_excavation.json  red_rush.json
docs/: agent-improvement-harness-operations.md  agent-improvement-harness.md  mtg-fidelity-campaign-next-steps.md  phase-rules-port.md  protocol.md
docs/specs/: 0001-phase-client-for-coworld.md  cogatrice-server-m2.md  tabletop-core-m1.md  web-client-m3.md
fixtures/wire/: core-frames.json
phase-client/: README.md  global.html  player.html  replay-player-names.patch  replay.html  vite.config.ts
phase-client/src/: coworld-chrome.test.tsx  coworld-chrome.tsx  coworld-replay-types.ts  coworld-ws-adapter.test.ts  coworld-ws-adapter.ts  main.tsx  wasm-draft-stub.ts  wasm-engine-stub.ts
scripts/: build-corpus-artifact.py  build-phase-client.sh  cargo.sh  check-phase-pin.py  check.sh  clean-generated.sh  fetch-corpus.sh  run-harness-worker.sh
scripts/tests/: test_fetch_corpus.py
web/: global.html  player.html  playwright.config.ts  replay.html  tsconfig.json  vite.config.ts
web/e2e/: browser-smoke.spec.ts  screenshots.spec.ts
web/src/: app.test.ts  app.ts  log.test.ts  log.ts  main-global.ts  main-player.ts  main-replay.ts  model.test.ts  model.ts  protocol-contract.test.ts  protocol.ts  renderer.ts  state.test.ts  state.ts  styles.css
