[workspace]
resolver = "2"
members = [
    "crates/coworld-mtg-harness",
    "crates/coworld-mtg-server",
    "crates/phase-bridge",
    "crates/players/goldfish",
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
futures = "0.3"
flate2 = "1"
hex = "0.4"
proptest = "1"
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"
