[package]
name = "cogatrice-harness"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv.workspace = true
flate2.workspace = true
hex.workspace = true
phase-bridge = { path = "../phase-bridge" }
rand.workspace = true
rand_chacha.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
