[package]
name = "coworld-mtg-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
private-corpus-tests = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
flate2.workspace = true
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
phase-bridge = { path = "../phase-bridge" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
goldfish = { path = "../players/goldfish" }
tokio-tungstenite.workspace = true
