[package]
name = "phase-bridge"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
phase-engine = { package = "engine", git = "https://github.com/nishu-builder/phase.git", rev = "3391a770ef35d4fa7717e7343841fd6e6ca4aec6" }
rand-chacha-phase = { package = "rand_chacha", version = "0.9", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
