[package]
name = "phase-bridge"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
phase-engine = { package = "engine", git = "https://github.com/nishu-builder/phase.git", rev = "2dec6c88915db4697706234a7ba2fcedd97b1689" }
rand-chacha-phase = { package = "rand_chacha", version = "0.9", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
