[package]
name = "goldfish"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
phase-bridge = { path = "../../phase-bridge" }
tokio.workspace = true
tokio-tungstenite.workspace = true
